selesain starter tugas

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,13 +1,29 @@
-# Gunakan versi stable, misal 1.23
+# Gunakan versi Go stable
 FROM golang:1.25-alpine
 
-# Instal 'air'
+# Set environment PATH supaya 'air' bisa dipanggil
+ENV PATH=$PATH:/go/bin
+
+# Install tools dasar: bash, mysql client, git, curl
+RUN apk add --no-cache bash mysql-client git curl
+
+# Install Air (hot reload)
 RUN go install github.com/air-verse/air@latest
 
+# Set working directory
 WORKDIR /app
 
-# Instal git (penting untuk go mod tidy) dan tools dasar
-RUN apk add --no-cache git curl
+# Copy go.mod + go.sum dulu untuk caching layer
+COPY go.mod go.sum ./
 
-# Expose port
+# Download dependencies
+RUN go mod download
+
+# Copy semua source code
+COPY . .
+
+# Expose port backend
 EXPOSE 8080
+
+# Default command: jalankan Air
+CMD ["air"]
