--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # Database Configuration
-DB_HOST=db
+DB_HOST=mysql-mag
 DB_PORT=3306
-DB_USER=starter_user
+DB_USER=root
 DB_PASSWORD=
-DB_NAME=starter_db
+DB_NAME=starer_user
 
 # Security
 JWT_SECRET=change_this_secret_in_prod
