--- a/.devcontainer/compose.yaml
+++ b/.devcontainer/compose.yaml
@@ -18,8 +18,8 @@ services:
     environment:
       - DB_HOST=db
       - DB_PORT=3306
-      - DB_USER=starter_user
-      - DB_PASS=starter_pass
+      - DB_USER=root
+      - DB_PASS=rootpassword
       - DB_NAME=starter_db
       - APP_PORT=8080
     ports:
@@ -35,8 +35,8 @@ services:
     container_name: starter_db
     environment:
       MYSQL_DATABASE: starter_db
-      MYSQL_USER: starter_user
-      MYSQL_PASSWORD: starter_pass
+      MYSQL_USER: root
+      MYSQL_PASSWORD: rootpassword
       MYSQL_ROOT_PASSWORD: rootpassword
     volumes:
       - mysql_starter_data:/var/lib/mysql:Z
