--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 # Database Configuration
-DB_HOST=db
+# DB_HOST=db
+DB_HOST=localhost
 DB_PORT=3306
-DB_USER=starter_user
-DB_PASSWORD=
+DB_USER=root
+DB_PASS=rootpassword
 DB_NAME=starter_db
 
 # Security
